"Updated index.html with new certificate links, updated CV button link, and modified portfolio section; removed pdf.pdf file."

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <h3>Information Security Management Systems - ISO/IEC 27001:2013</h3>
                     <p>CBQA Global</p>
                     <span class="cert-date">Issued: Dec 2022</span>
-                    <a href="#" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://studentsuajyac-my.sharepoint.com/:b:/r/personal/211711527_students_uajy_ac_id/Documents/(2609)%20Foundation%20Training%20Certificate_12%20Dec%202022%20(1).pdf?csf=1&web=1&e=Tm9pgK" target="_blank" class="cert-link">View Certificate <i class="fas fa-external-link-alt" ></i></a>
                 </div>
             </div>
 
@@ -149,7 +149,7 @@
                     <h3>Data Analytics & Software Development With AI</h3>
                     <p>PT Revolusi Cita Edukasi</p>
                     <span class="cert-date">Issued: Jun 2024</span>
-                    <a href="#" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://drive.google.com/file/d/1iArqBelgM5oAZTVTBTHvLXuxL24c4XPI/view?usp=sharing" target="_blank" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
 
@@ -161,7 +161,7 @@
                     <h3>Advanced Data Science With Python</h3>
                     <p>Udemy</p>
                     <span class="cert-date">Issued: Nov 2024</span>
-                    <a href="#" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://www.udemy.com/certificate/UC-6a87c33b-4cfe-4ea5-824b-59b8c8806efd/" target="_blank" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
         </div>
@@ -175,7 +175,7 @@
                     <h3>Backend Programming & Cyber Security</h3>
                     <p>Udemy</p>
                     <span class="cert-date">Issued: Nov 2024</span>
-                    <a href="#" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://www.udemy.com/certificate/UC-7993b6ac-9739-4df4-9942-0bacc5ccf814/" target="_blank" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
 
@@ -187,7 +187,7 @@
                     <h3>Docker, Kubernetes, & DevOps</h3>
                     <p>Udemy</p>
                     <span class="cert-date">Issued: Nov 2024</span>
-                    <a href="#" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://www.udemy.com/certificate/UC-264fe260-5344-4036-bf54-e659fe47a16f/" target="_blank" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
 
@@ -199,7 +199,7 @@
                     <h3>Building a REST API with Express & MongoDB</h3>
                     <p>Belajar Skill</p>
                     <span class="cert-date">Issued: Mei 2024</span>
-                    <a href="#" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://belajar-skill.id/akses/kelas-membuat-rest-api-dengan-express-nodejs-mongodb/" target="_blank" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
         </div>
@@ -292,7 +292,7 @@
 
         <!-- Download CV Button -->
         <div class="cv-button-container">
-            <a href="pdf.pdf" class="btn btn-primary cv-button" download>
+            <a href="Resume-Zakaria-Nov.pdf" class="btn btn-primary cv-button" download>
                 Download CV
             </a>
         </div>
@@ -442,7 +442,7 @@
     <section id="portfolio" class="portfolio">
       <div class="container">
           <div class="section-header">
-              <h2>Portfolio</h2>
+              <h2>Portfolio (Repair!)</h2>
               <div class="section-line"></div>
           </div>
   
@@ -457,9 +457,9 @@
   
           <div class="portfolio-grid">
               <!-- Data Analysis Projects -->
-              <div class="portfolio-item" data-category="data-analysis">
+              <!-- <div class="portfolio-item" data-category="data-analysis">
                   <div class="portfolio-image">
-                      <img src="/api/placeholder/400/300" alt="Vending Machine Analysis">
+                      <img src="images/" alt="Vending Machine Analysis">
                       <div class="portfolio-overlay">
                           <div class="portfolio-content">
                               <span class="project-category">Data Analysis</span>
@@ -468,16 +468,18 @@
                               <div class="tech-stack">
                                   <span>Python</span>
                                   <span>Pandas</span>
-                                  <span>ML</span>
+                                  <span>Excel</span>
+                                  <span>Google Looker Studio</span>
+                                  <span>Google BigQuery</span>
                               </div>
                               <a href="#" class="btn btn-outline">View Project</a>
                           </div>
                       </div>
                   </div>
-              </div>
+              </div> -->
   
               <!-- Software Development Projects -->
-              <div class="portfolio-item" data-category="software">
+              <!-- <div class="portfolio-item" data-category="software">
                   <div class="portfolio-image">
                       <img src="/api/placeholder/400/300" alt="SIGAPTELNET System">
                       <div class="portfolio-overlay">
@@ -494,10 +496,10 @@
                           </div>
                       </div>
                   </div>
-              </div>
+              </div> -->
   
               <!-- UI/UX Design Projects -->
-              <div class="portfolio-item" data-category="design">
+              <!-- <div class="portfolio-item" data-category="design">
                   <div class="portfolio-image">
                       <img src="/api/placeholder/400/300" alt="E-Commerce UI">
                       <div class="portfolio-overlay">
@@ -514,10 +516,10 @@
                           </div>
                       </div>
                   </div>
-              </div>
+              </div> -->
   
               <!-- Documentation Projects -->
-              <div class="portfolio-item" data-category="documentation">
+              <!-- <div class="portfolio-item" data-category="documentation">
                   <div class="portfolio-image">
                       <img src="/api/placeholder/400/300" alt="Technical Documentation">
                       <div class="portfolio-overlay">
@@ -534,7 +536,7 @@
                           </div>
                       </div>
                   </div>
-              </div>
+              </div> -->
           </div>
       </div>
     </section>
@@ -599,7 +601,10 @@
                 </div>
                 <div class="footer-links">
                     <a href="#home">Home</a>
-                    <a href="#about">About</a>
+                    <a href="#education">Education</a>
+                    <a href="#certifications">Certifications</a>
+                    <a href="#skills">Skills & Expertise</a>
+                    <a href="#experience">Experience</a>
                     <a href="#portfolio">Portfolio</a>
                     <a href="#contact">Contact</a>
                 </div>
