--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
     <!-- Favicons -->
     <link href="images/icon.png" rel="icon">
@@ -40,7 +41,7 @@
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="intern-ba.html">Others</a></li>
+                    <li><a href="documentation.html">Documentation</a></li>
                 </ul>
             </nav>
         </div>
@@ -55,9 +56,14 @@
                       <div class="typed-text">I'm a <span class="typed"></span></div>
                       <p class="hero-description">Creating innovative solutions through data analysis and software development!</p>
                       <div class="hero-buttons">
-                          <a href="#portfolio" class="btn btn-primary">View My Portfolio</a>
-                          <a href="#contact" class="btn btn-outline">Contact Me</a>
-                      </div>
+                        <a href="https://github.com/ZakariaPU" class="btn btn-primary" target="_blank">
+                            <i class="fab fa-github" style="margin-right: 8px;"></i> GitHub
+                        </a>
+                        <a href="https://www.linkedin.com/in/zakaria-priyo/" class="btn btn-outline" target="_blank">
+                            <i class="fab fa-linkedin" style="margin-right: 8px;"></i> LinkedIn
+                        </a>
+                    </div>
+                    
                   </div>
                   <div class="hero-image">
                       <div class="profile-frame">
@@ -293,7 +299,7 @@
 
         <!-- Download CV Button -->
         <div class="cv-button-container">
-            <a href="CV_Zakaria_Dec.pdf" class="btn btn-primary cv-button" download>
+            <a href="CV_Web Portfolio_Zakaria_Feb.pdf" class="btn btn-primary cv-button" download>
                 Download CV
             </a>
         </div>
@@ -310,6 +316,25 @@
             </div>
             
             <div class="timeline">
+
+                <div class="timeline-container right">
+                    <div class="timeline-content">
+                        <div class="timeline-date">Dec 2024 - Present 2024</div>
+                        <div class="timeline-body">
+                            <h3>IT Business Analyst at PT Hanjaya Dayari Raya (DXYARY)</h3>
+                            <p>Started my journey as an IT Business Analyst, bridging the gap between business needs and technology by leveraging analytical thinking, effective communication, and problem-solving skills to deliver impactful solutions and optimize business processes.</p>
+                            <div class="timeline-tech">
+                                <span>Business Analysis</span>
+                                <span>Requirements Gathering</span>
+                                <span>Stakeholder Management</span>
+                                <span>Process Improvement</span>
+                                <span>Data Analysis</span>
+                                <span>Problem Solving</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="timeline-container left">
                     <div class="timeline-content">
                         <div class="timeline-date">Sep 2024 - Jan 2025</div>
