--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="documentation.html">Documentation</a></li>
+                    <!-- <li><a href="documentation.html">Documentation</a></li> -->
                 </ul>
             </nav>
         </div>
@@ -64,7 +64,7 @@
                   <div class="hero-text">
                       <h1 class="glitch-text" data-text="Zakaria Priyo Utomo">Zakaria Priyo Utomo</h1>
                       <div class="typed-text">I'm a <span class="typed"></span></div>
-                      <p class="hero-description">Creating innovative solutions through data analysis and software development!</p>
+                      <p class="hero-description">Optimizing business processes with system analysis and data-driven solutions.</p>
                       <div class="hero-buttons">
                         <a href="https://github.com/ZakariaPU" class="btn btn-primary" target="_blank">
                             <i class="fab fa-github" style="margin-right: 8px;"></i> GitHub
@@ -77,7 +77,7 @@
                   </div>
                   <div class="hero-image">
                       <div class="profile-frame">
-                          <img src="images\zakaria.jpg" alt="Zakaria Priyo Utomo">
+                          <img src="images\Pas Foto.jpg" alt="Zakaria Priyo Utomo">
                           <div class="frame-decoration"></div>
                       </div>
                   </div>
@@ -102,8 +102,8 @@
                     <span class="edu-year">2021 - Present</span>
                     <h3>Information Systems</h3>
                     <h4>Universitas Atma Jaya Yogyakarta</h4>
-                    <p>Specialization in Business Analyst, IT Strategist, & Data Analytics</p>
-                    <span class="gpa">GPA: 3.79/4.00</span>
+                    <p>Specialization in Business Analyst, System Development, & Data Analytics</p>
+                    <span class="gpa">GPA: 3.81/4.00</span>
                 </div>
             </div>
 
@@ -284,6 +284,11 @@
                         <span>ChatGPT</span>
                         <span>Gemini</span>
                         <span>ClaudeAI</span>
+                        <span>Taiga</span>
+                        <span>Jira</span>
+                        <span>Slack</span>
+                        <span>Wodpress</span>
+                        <span>Autocrat</span>
                     </div>
                 </div>
             </div>
@@ -309,7 +314,7 @@
 
         <!-- Download CV Button -->
         <div class="cv-button-container">
-            <a href="CV_Web Portfolio_Zakaria_Feb.pdf" class="btn btn-primary cv-button" download>
+            <a href="CV_Zakaria_Maret 25.pdf" class="btn btn-primary cv-button" download>
                 Download CV
             </a>
         </div>
@@ -327,6 +332,24 @@
             
             <div class="timeline">
 
+                <div class="timeline-container left">
+                    <div class="timeline-content">
+                        <div class="timeline-date">Feb 2025 - Present (Remote)</div>
+                        <div class="timeline-body">
+                            <h3>System Analyst at PT Sineas Kreasi Indonesia </h3>
+                            <p>Designed and analyzed system requirements to improve workflow efficiency and ensure seamless integration between software solutions.</p>
+                            <div class="timeline-tech">
+                                <span>Software Requirements Systems (SRS)</span>
+                                <span>API Documentation</span>
+                                <span>UML Diagram</span>
+                                <span>Software Development Life Cycle (SDLC)</span>
+                                <span>Database Schema</span>
+                                <span>System Integration</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="timeline-container right">
                     <div class="timeline-content">
                         <div class="timeline-date">Dec 2024 - Present 2024</div>
@@ -336,8 +359,8 @@
                             <div class="timeline-tech">
                                 <span>Business Analysis</span>
                                 <span>Requirements Gathering</span>
-                                <span>Stakeholder Management</span>
-                                <span>Process Improvement</span>
+                                <span>Market Research</span>
+                                <span>System Design</span>
                                 <span>Data Analysis</span>
                                 <span>Problem Solving</span>
                             </div>
@@ -488,7 +511,8 @@
               <button class="filter-btn" data-filter="data-analysis">Data Analysis</button>
               <button class="filter-btn" data-filter="software">Software Dev</button>
               <button class="filter-btn" data-filter="design">UI/UX Design</button>
-              <button class="filter-btn" data-filter="documentation">Documentation</button>
+              <button class="filter-btn" data-filter="documentation">System Analyst</button>
+              <button class="filter-btn" data-filter="documentation">Database Management</button>
           </div>
   
           <div class="portfolio-grid">
