--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
         <!-- Download CV Button -->
         <div class="cv-button-container">
-            <a href="CV_Zakaria_Maret 25.pdf" class="btn btn-primary cv-button" download>
+            <a href="CV_Zakaria Priyo Utomo_042025.pdf" class="btn btn-primary cv-button" download>
                 Download CV
             </a>
         </div>
